<resources>
    <string name="app_name">Sleep App</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="logoText">ПРО сон</string>
    <string name="fieldFileText">Введите путь к файлу *.csv</string>
    <string name="mesErrorNoFileText">Заполните путь к файлу</string>
    <string name="btnLoadFile">Загрузить файл</string>
    <string name="btnChangeFile">Преобразовать файл</string>
    <string name="fieldTable">Введите ссылку на таблицу из Google Таблиц</string>
    <string name="btnLoadData">Загрузить данные</string>
    <string name="resultInfo">Результат</string>
    <!-- + Дима 19.03.2022 Добавлены поля "Дата начала" и "Дата окончания" -->
    <string name="fieldDateStart">Введите начало периода</string>
    <string name="fieldDateEnd">Введите окончание периода</string>
    <!-- - Дима 19.03.2022 Добавлены поля "Дата начала" и "Дата окончания" -->
    <!-- + Вика 19.03.2022 Добавлены поля для сообщения "Дата начала" и "Дата окончания" -->
    <string name="mesErrorNoDateStartEnd">Заполните начало и окончание периода</string>
    <!-- - Вика 19.03.2022 Добавлены поля для сообщения "Дата начала" и "Дата окончания" -->
</resources>