<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:theme="@style/Theme.SleepApp.AppBarOverlay">

        <TextView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/logoText"
            android:layout_marginTop="50sp"
            android:textAlignment="center"
            android:textColor="#D58585"
            android:background="@color/cardview_light_background"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="16dp" />

        <!-- + Дима 19.03.2022 Добавлены поля "Дата начала" и "Дата окончания" -->
        <EditText
            android:id="@+id/fieldDateStart"
            android:layout_width="265dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/fieldDateStart"
            android:textColorHint="@color/black"
            android:textColor="@color/teal_700"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="10sp"
            android:layout_marginHorizontal="50sp"
            />

        <EditText
            android:id="@+id/fieldDateEnd"
            android:layout_width="265dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/fieldDateEnd"
            android:textColorHint="@color/black"
            android:textColor="@color/teal_700"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="10sp"
            android:layout_marginHorizontal="50sp"
            />
        <!-- - Дима 19.03.2022 Добавлены поля "Дата начала" и "Дата окончания" -->

        <!-- + Дима 19.03.2022 Изменена высота на 30 -->
        <EditText
            android:id="@+id/fieldFile"
            android:layout_width="265dp"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/fieldFileText"
            android:textColorHint="@color/black"
            android:textColor="@color/teal_700"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="30sp"
            android:layout_marginHorizontal="50sp"
            android:backgroundTint="@color/cardview_light_background"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="147dp"
            />
        <!-- - Дима 19.03.2022 Изменена высота на 30  -->
        <Button
            android:id="@+id/btnLoadFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="130sp"
            android:backgroundTint="@color/teal_200"
            android:fontFamily="@font/montserrat"
            android:text="@string/btnLoadFile"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="218dp"
            tools:text="@string/btnLoadFile" />

        <Button
            android:id="@+id/btnChangeFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/btnChangeFile"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="20sp"
            android:layout_marginHorizontal="110sp"
            android:backgroundTint="@color/teal_200"
            tools:layout_editor_absoluteX="143dp"
            tools:layout_editor_absoluteY="293dp" />

        <EditText
            android:id="@+id/fieldTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/fieldTable"
            android:textColorHint="@color/black"
            android:textColor="@color/teal_700"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="50sp"
            android:layout_marginHorizontal="30sp"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="383dp" />

        <Button
            android:id="@+id/btnLoadData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/btnLoadData"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="20sp"
            android:layout_marginHorizontal="130sp"
            android:backgroundTint="@color/teal_200"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="449dp" />

        <ListView
            android:id="@+id/listData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            />

        <TextView
            android:id="@+id/result_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/resultInfo"
            android:layout_marginTop="40sp"
            android:textAlignment="center"
            android:textColor="#D58585"
            android:textSize="10sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="182dp"
            tools:layout_editor_absoluteY="561dp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        app:srcCompat="@android:drawable/ic_dialog_email" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>